--- a/index.html
+++ b/index.html
@@ -53,5 +53,9 @@
             $('.bxslider').bxSlider();
             });
         </script>
+        <script src="app.js"></script>
+        <script>
+            init()
+        </script>
     </body>
 </html>
