--- a/login.html
+++ b/login.html
@@ -20,5 +20,9 @@
             </div>
         </div>  
     </div>
+    <script src="app.js"></script>
+    <script>
+        loadLogin()
+    </script>
 </body>
 </html>
