--- a/login.html
+++ b/login.html
@@ -5,24 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="style-index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Login</title>
 </head>
 <body>
-    <div class="container-center">
-        <div class="container-username">
-            <header>
-                <h1 class="logo logo-vertical">N&EStore<i class="fas fa-store"></i>
-            </header>
-            <div class="form-body">
-                <input class="form-control form-control-lg" type="text" id="username" placeholder="Ingrese su nombre de usuario">
-                <button id="btnLogin" class="btn btn-lg">Entrar</button>
+    <header class="header">
+            <h1 class="logo"><a href="index.html">N&EStore<i class="fas fa-store"></i></a></h1>
+            <input type="checkbox" id="btn-menu">
+            <label for="btn-menu"><img src="img/menu.png" alt=""></label>
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html" class="home">Inicio</a></li>
+                    <li><a href="productos.html" class="productos">Productos</a></li>
+                    <li><a href="carrito.html" class="shopping-cart">Carrito<i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a href="login.html" class="username">Login<i class="fas fa-user"></i></a></li>
+                    <li><a href="#" class="logout" id="logout">Salir<i class="fas fa-sign-out-alt"></i></a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main">
+            <div class="container-username">
+                <div class="form-body">
+                    <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
+                    <input class="form-control form-control-lg" type="text" id="username" placeholder="Ingrese su nombre de usuario">
+                    <div class="botonL">
+                        <button id="btnLogin" class="btn-lg">Entrar</button>
+                    </div>
+                </div>
             </div>
-        </div>  
-    </div>
+        </main>
+        <footer>
+            <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
+            <div class="social">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+            </div>
+        </footer>
     <script src="app.js"></script>
     <script>
         loadLogin()
+        init()
     </script>
 </body>
 </html>
