--- a/productos.html
+++ b/productos.html
@@ -17,11 +17,11 @@
             <label for="btn-menu"><img src="img/menu.png" alt=""></label>
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html" class="home" id="selected">Inicio</a></li>
+                    <li><a href="index.html" class="home">Inicio</a></li>
                     <li><a href="productos.html" class="productos">Productos</a></li>
                     <li><a href="carrito.html" class="shopping-cart">Carrito<i class="fas fa-shopping-cart"></i></a></li>
                     <li><a href="login.html" class="username">Login<i class="fas fa-user"></i></a></li>
-                    <li><a href="#" class="logout">Salir<i class="fas fa-sign-out-alt"></i></a></li>
+                    <li><a href="#" class="logout" id="logout">Salir<i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
             </nav>
         </header>
@@ -35,5 +35,9 @@
                 <i class="fab fa-twitter"></i>
             </div>
         </footer>
+        <script src="app.js"></script>
+        <script>
+            init()
+        </script>
     </body>
 </html>
