--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                     <li><img src="img/4.jpg" alt=""></li>
                 </ul>
             </div>
-            <div class="productos">
-                
+            <div class="productos-content" id="products">
             </div>
         </main>
         <footer>
