--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Home</title>
+        <title>N&E STORE</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=no,
         initial-scale=1, maximum-scale=1, minimum-scale=1">
