--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Home</title>
+        <title>N&E STORE</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=no,
         initial-scale=1, maximum-scale=1, minimum-scale=1">
@@ -39,12 +39,19 @@
             </div>
             <div class="productos-content" id="products">
             </div>
+            <div class="view-more">
+                <a href="productos.html" class="btn-view"><i class="fas fa-search-plus"></i> Ver más...</a>
+            </div>
         </main>
         <footer>
             <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
             <div class="social">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
+            </div>
+            <div class="about">
+                <br>5 de febrero s/n <br>Teléfono: 6122192275 <br>
+                Correo: n-e_store@gmail.com <br> <br>
             </div>
         </footer>
         <script>
@@ -55,6 +62,7 @@
         <script src="app.js"></script>
         <script>
             init()
+            initProducts(3)
         </script>
     </body>
 </html>
