--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Home</title>
+        <title>N&E STORE</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=no,
         initial-scale=1, maximum-scale=1, minimum-scale=1">
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="main">
+        <main class="main" id="products">
            
         </main>
         <footer>
@@ -38,6 +38,7 @@
         <script src="app.js"></script>
         <script>
             init()
+            initProducts(9)
         </script>
     </body>
 </html>
