--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <script src="app.js"></script>
         <script>
             init()
-            initProducts(3)
+            initProducts(3, '#products')
         </script>
     </body>
 </html>
