--- a/productos.html
+++ b/productos.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="main" id="products">
+        <main class="main-products" id="main-products">
            
         </main>
         <footer>
@@ -38,7 +38,7 @@
         <script src="app.js"></script>
         <script>
             init()
-            initProducts(9)
+            initProducts(9, '#main-products')
         </script>
     </body>
 </html>
