--- a/carrito.html
+++ b/carrito.html
@@ -45,9 +45,13 @@
         </div>
         <footer>
             <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
+            <h2>Todos los derechos reservados</h2>
             <div class="social">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
+            </div>
+            <div class="about">
+                Carretera al Sur KM 5.5., Apartado Postal 19-,B, C.P. 23080, La Paz Baja California Sur, México. Teléfono (612) 12 388 00 <br><br>
             </div>
         </footer>
         <script src="app.js"></script>
