--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </main>
         <footer>
             <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
+            <h2>Todos los derechos reservados</h2>
             <div class="social">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
             </div>
             <div class="about">
-                <br>5 de febrero s/n <br>Teléfono: 6122192275 <br>
-                Correo: n-e_store@gmail.com <br> <br>
+                Carretera al Sur KM 5.5., Apartado Postal 19-,B, C.P. 23080, La Paz Baja California Sur, México. Teléfono (612) 12 388 00 <br><br>
             </div>
         </footer>
         <script>
