--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </main>
         <footer>
             <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
-            <h2>Todos los derechos reservados</h2>
+            Todos los derechos reservados
             <div class="social">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
