--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
                     <li><a href="productos.html" class="productos">Productos</a></li>
                     <li><a href="carrito.html" class="shopping-cart">Carrito<i class="fas fa-shopping-cart"></i></a></li>
                     <li><a href="login.html" class="username">Login<i class="fas fa-user"></i></a></li>
-                    <li><a href="#" class="logout" id="logout">Salir<i class="fas fa-sign-out-alt"></i></a></li>
+                    <li><a href="#" class="logout" id="logout">Salir <i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
             </nav>
         </header>
@@ -29,11 +29,11 @@
            
         </main>
         <footer>
-            <h1 class="logo">N&EStore<i class="fas fa-store"></i></h1>
+            <h1 class="logo"><a href="index.html">N&EStore<i class="fas fa-store"></i></a></h1>
             Todos los derechos reservados
             <div class="social">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
+                <a href="index.html"><i class="fab fa-facebook-f"></i></a>
+                <a href="index.html"><i class="fab fa-twitter"></i></a>
             </div>
             <div class="about">
                 Carretera al Sur KM 5.5., Apartado Postal 19-,B, C.P. 23080, La Paz Baja California Sur, México. Teléfono (612) 12 388 00 <br><br>
